# pinbored-tauri

./: .editorconfig  .gitignore  .mcp.json  .oxlintrc.json  .prettierignore  .prettierrc  .prettierrc.js  .slop.toml  AGENTS.md  BEST-PRACTICES.md  CLAUDE.md  GEMINI.md  IMPROVEMENTS.md  LICENSE  PLANNING-V1-MVP.md  PLANNING-V2.md  PLANNING.md  README.md  SECURITY.md  angular.json  components.json  eslint.config.js  fallow.toml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  report.20220702.171525.19844.0.001.json  rollup.config.js  sheriff.config.js  sheriff.config.ts  skills-lock.json  tsconfig.app.json  tsconfig.json  vitest-base.config.ts
.ai/mcp/: mcp.json
.claude/: settings.local.json
.github/workflows/: build.yaml  dependency-review.yml  health-checks.yml  node.js.yml  release.yaml  rust.yml  test-on-pr.yml
backlog/: config.yml
bruno/: .env.example  .gitignore  api_token.yml  opencollection.yml  posts-all.yml
planning/: PLANNING-V1-MVP.md  PLANNING-V2.md  PLANNING-V3.md  PLANNING-V4.md  step-3-delete-bookmark.md
plans/: step-1-open-bookmark.md  step-2-stale-check.md
public/: global.css  global.scss
src/: App.svelte  global.d.ts  index.html  planning.md  styles.css  styles.scss  todo.ts
src-api/: contants.ts  index.ts  pinboard.service.ts  pinboardv1.service.ts  pinboardv2.service.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 0001_create_pinboard_tables.sql  0002_alter_pinboard_tables.sql  0003_add_dummy_data.sql
src-tauri/src/: lib.rs  main.rs
src/app/: app.ts  (+6 more)
(+565 files in other folders)
