[package]
name = "pinbored-tauri"
version = "0.1.0"
description = "A Pinboard management app built with Tauri"
authors = ["Michaël Trouw"]
edition = "2024"

[profile.dev]
incremental = true # Compile your binary in smaller steps.
opt-level = 3 # 's' for small binary size, 3 if you prefer speed.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = 's' # 's' for small binary size, 3 if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pinbored_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = "2"
tauri-plugin-devtools = "2.0.0"
tauri-plugin-store = "2"

